testsuite/tests/properties/invalid_predicate_error/stray_dollar_trailing.lkt
import common

@abstract
class FooNode implements Node[FooNode] {
    @predicate_error("msg: $n $")
    fun pred(@ignored n: Entity[Example]): Bool = false
}
